# RAG-Bachelor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/commands/: audit-async.md  diagnose-server.md
.devcontainer/: devcontainer.json
src/rag_bachelor/: __init__.py  config.py
src/rag_bachelor/app/: __init__.py  main.py
src/rag_bachelor/app/tabs/: __init__.py  ask.py  documentation.py  generate_questions.py  progress.py  revision.py  settings_tab.py
src/rag_bachelor/app/web/: __init__.py  _deps.py  server.py
src/rag_bachelor/app/web/routes/: __init__.py  ask.py  documentation.py  generate.py  progress.py  revision.py  settings.py
src/rag_bachelor/app/web/static/: app.css  htmx.min.js
src/rag_bachelor/app/web/templates/: ask.html  base.html  documentation.html  generate.html  progress.html  revision.html  settings.html
src/rag_bachelor/app/web/templates/partials/: answer.html  doc_list.html  gen_questions.html  provider_status.html  revision_card.html
src/rag_bachelor/core/: __init__.py  embeddings.py  llm.py  qa.py  questions.py  retriever.py
src/rag_bachelor/ingest/: __init__.py  chunk.py  extract.py  index.py
src/rag_bachelor/study/: __init__.py  srs.py  stats.py  store.py
tests/: conftest.py  test_chunk.py  test_provider.py  test_srs.py
