[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-bachelor"
version = "0.1.0"
description = "Local-first RAG study assistant for French bachelor documentation"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.35.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_bachelor"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-v"]
