[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-bachelor"
version = "0.1.0"
description = "Local-first RAG study assistant for French bachelor documentation"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "pydantic-settings>=2.3.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rag-web = "rag_bachelor.app.web.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_bachelor"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-v"]
